0029768: Visualization, TKOpenGl - structure is entirely clipped by suppressed clipping

OpenGl_Structure::Render(), added missing check for disabled state of the plane.
vclipplane command has been extended with new option -setOverrideGlobal.